added styling to the resume

--- a/src/index.html
+++ b/src/index.html
@@ -14,19 +14,21 @@
         <article class="box">
             <h1>Thamindu Chankana Gamage</h1>
             <div><a href="Thamindu.Gamage@studentambassadors.com">Thamindu.Gamage@studentambassadors.com</a></div>
-            
+            <br>
             <section class="box">
                 <h2>
                     <i class="fa fa-bullhorn" aria-hidden="true"></i>
                     Social media
                 </h2>
+                <br>
                 <ul>
                     <li><a href="https://github.com/ThaminduChankana">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/thamindu-gamage-5391b5192/">Linkedin</a></li>
                     <li><a href="https://twitter.com/Thamindu0707">Twitter</a></li>
                     <li><a href="https://www.facebook.com/thaminduchankana.gamage.5">Facebook</a></li>
                     <li><a href="https://thaminduchankana.netlify.app/">Personal Website</a></li>
-                </ul>    
+                </ul>
+                <br>    
             </section>
             
             <section class="box">
@@ -35,12 +37,14 @@
                         <i class="fa fa-certificate" aria-hidden="true"></i>
                         Sri Lanka Institute of Information Technology
                     </h2>
+                    <br>
                     <h3>Specialization - Software Engineering</h3>
                     <ul>
                         <li>GPA: 3.8</li>
                         <li>2020 - Present (2023) Third Year</li>
                     </ul>
                 </div>
+                <br>
             </section>
 
             <section class="box">
@@ -48,6 +52,7 @@
                     <i class="fa fa-check" aria-hidden="true"></i>
                     Skills
                 </h2>
+                <br>
                 <ul>
                     <li>CSS</li>
                     <li>HTML</li>
@@ -69,14 +74,16 @@
                     <li>CI/CD</li>
                     <li>Visual Studio Code</li>
                 </ul>
+                <br>
             </section>
         </article>
         <article class="box">
-            <br class="box">
+            <section class="box">
                 <h2>
                     <i class="fa fa-briefcase" aria-hidden="true"></i>
                     Experience
                 </h2>
+                <br>
                 <h3>Microsoft Learn Student Ambassador</h3>
                 <ul>
                     <li>Communication skills</li>
@@ -87,18 +94,19 @@
                     <li>Teamworking</li>
                     <li>Leadership skills</li>
                 </ul>
+                <br>
             </section>
-            <br>
             <section class="box">
                 <h2>
                     <i class="fa fa-building" aria-hidden="true"></i>
                     Internships
                 </h2>
-
+                <br>
                 <h3>LSEG Technologies</h3>
                 <ul>
                     <li>Intern Software Engineer</li>
                 </ul>
+                <br>
             </section>
             <section class="box">
                 <h2>
